fixed extra space on x-axis

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,8 +3,13 @@ html, body{
   max-width: 100%;
   overflow-x: hidden;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  box-sizing: border-box;
+  flex-wrap:wrap;
 }
-
+img {
+  max-width: 100%;
+  height:auto;
+}
 p {
   max-width: 80ch;
   line-height:1.8;
@@ -19,14 +24,14 @@ p {
   filter: invert(100%);
 }
 .home{
-  width:100vw;
-  height:100vh;
+  width:100%;
+  height:100%;
   position:static;
   display:block;
 }
 .background{
-  width:100vw;
-  height:100vh;
+  width:100%;
+  height:100%;
   position: absolute;
   animation: fadeOut 1.4s ease forwards;
 
@@ -45,8 +50,8 @@ p {
 
 .introGIF{
   position:absolute;
-  width:100vw;
-  height:100vh;
+  width:100%;
+  height:100%;
   object-fit: contain;
   background-color: black;
   z-index: 1;
@@ -58,8 +63,8 @@ p {
 .header{
   position: fixed;
   top: 0;
-  display: inline-flex;
-  width: 100vw;
+  display: flex;
+  width: 100%;
   height: 20%;
   align-items:center;
   justify-content:center;
@@ -81,7 +86,7 @@ p {
   position: absolute;
   top: 20%;
   left:0;
-  width:100vw;
+  width:100%;
   height:20%;
   opacity:0;
   background-color: white;
@@ -139,6 +144,7 @@ p {
   display: inline-block; 
   position: relative; 
   text-decoration: none; 
+  text-align: center;
   cursor: pointer; 
 }
 .span-button::after{
@@ -155,11 +161,12 @@ p {
   width: 100%; 
 }
 .header-middle{
-  padding: 20px;
   display:inline-flex;
   flex-direction: row;
   align-items:center;
+  justify-items: center;
   gap: 50px;
+  margin: 0 auto;
 }
 .homepage-container{
   scroll-snap-type: y-mandatory;
@@ -539,7 +546,6 @@ input[type='radio']{
 .footer {
   position: relative;
   width: 100%;
-  padding: 10px 20px; 
   text-align: center; 
   font-size: 14px; 
   display:flex;
